Aula 10 - Launching activities with explicit intents, passing and receiving data from launched activity.

--- a/UserTasks/app/src/main/res/layout/activity_b.xml
+++ b/UserTasks/app/src/main/res/layout/activity_b.xml
@@ -4,19 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity2">
+    tools:context=".ActivityA1">
 
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/btnLaunch"
         android:layout_width="wrap_content"
-        android:layout_height="13dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Activity2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="LaunchB1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/receivedText"
+        android:layout_width="wrap_content"
+        android:layout_height="18dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        app:layout_constraintStart_toEndOf="@+id/btnLaunch"
+        app:layout_constraintTop_toTopOf="@+id/btnLaunch" />
 </android.support.constraint.ConstraintLayout>
