Aula 20 - Room sample at end of class now working. Fixed missing dependencies and incorrect layout on Recycled View Item.

--- a/RoomWordSample/app/src/main/res/layout/content_main.xml
+++ b/RoomWordSample/app/src/main/res/layout/content_main.xml
@@ -9,12 +9,11 @@
         tools:showIn="@layout/activity_main"
         tools:context=".view.MainActivity">
 
-    <androidx.recyclerview.widget
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/darker_gray"
-            tools:listitem="@layout/recyclerview_item"
             android:src="@drawable/ic_android_black_24dp"
     />
 
